--- a/sms_spam_classifier/sms_spam_detection.ipynb
+++ b/sms_spam_classifier/sms_spam_detection.ipynb
@@ -1,6 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "1a53b60b",
+   "metadata": {},
+   "source": [
+    "# Task -1  of Technohacks edutech official intern Program"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0dfc8ed",
+   "metadata": {},
+   "source": [
+    "# sms spam filtering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21d01216",
+   "metadata": {},
+   "source": [
+    "# "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "c88a3b84",
